objects/NPI_Records__c.object
<CustomObject>
    <fields>
        <fullName>AE_Email__c</fullName>
        <label>AE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceeded_Current_Year_Stark_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceeded Current Year Stark Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exceeded_Last_Year_Stark_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceeded Last Year Stark Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Total__c</fullName>
        <label>Current Year Expense Total</label>
        <summarizedField>Expenses__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expenses__c.Expense_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2020</value>
        </summaryFilterItems>
        <summaryForeignKey>Expenses__c.NPI_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c &amp; &quot; &quot; &amp; Last_Name__c &amp; &quot;, &quot; &amp; NPI_City__c &amp; &quot;, &quot; &amp; NPI_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Practice_Name__c</fullName>
        <label>Group Practice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Expense_Amount__c</fullName>
        <label>Last Expense Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Expense_Date__c</fullName>
        <defaultValue>DATEVALUE(&quot;1/1/1901&quot;)</defaultValue>
        <label>Last Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Expense_Submitted_By__c</fullName>
        <label>Last Expense Submitted By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Expense_Submitted_On__c</fullName>
        <label>Last Expense Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Year_s_Expense_Total__c</fullName>
        <label>Last Year&apos;s Expense Total</label>
        <summarizedField>Expenses__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expenses__c.Expense_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expenses__c.Expense_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2019</value>
        </summaryFilterItems>
        <summaryForeignKey>Expenses__c.NPI_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MP_NPI_Active__c</fullName>
        <description>NPI is presently active on NPPES.</description>
        <label>NPI Active</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_PECOS_O_R__c</fullName>
        <description>NPI is on the PECOS ordering and referring list.</description>
        <label>PECOS O&amp;R</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedPro_Last_Update__c</fullName>
        <label>MedPro Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI_City__c</fullName>
        <label>NPI City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <externalId>true</externalId>
        <label>NPI Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NPI_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPI Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI_State__c</fullName>
        <label>NPI State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPI Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Year_s_Expense_Total__c</fullName>
        <label>Previous Year&apos;s Expense Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quintile__c</fullName>
        <label>Quintile</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Samples__c</fullName>
        <description>Updated via Apex Class NpiService</description>
        <label>Total Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2018_Expense_Total__c</fullName>
        <description>Test field using DLRS</description>
        <label>2018 Expense Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>NPI Record</label>
    <listViews>
        <fullName>All_NPIs</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NPI_Number__c</columns>
        <columns>NPI_City__c</columns>
        <columns>NPI_State__c</columns>
        <columns>Expense_Total__c</columns>
        <columns>NPI_Trigger__c</columns>
        <filterScope>Everything</filterScope>
        <label>All NPIs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NPI_with_Expenses</fullName>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Expense_Total__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>NPI_Number__c</columns>
        <columns>NPI_City__c</columns>
        <columns>NPI_State__c</columns>
        <columns>NPI_Trigger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expense_Total__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>NPI with Expenses</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NPI Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPI Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>